--- a/Examples/iOS/MIDIUtility/MIDIUtility/Base.lproj/Main.storyboard
+++ b/Examples/iOS/MIDIUtility/MIDIUtility/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MidiMonitor" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MIDIUtility" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -32,15 +32,14 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="AudioKit MIDI Monitor V0.1 - Bare Bones" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fcO-WS-ZhL">
-                                <rect key="frame" x="20" y="20" width="482.5" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AudioKit MIDI Utility" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fcO-WS-ZhL">
+                                <rect key="frame" x="16" y="20" width="139.5" height="17"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Listening to all MIDI Inputs" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xTO-NK-fv8">
-                                <rect key="frame" x="20" y="45" width="482.5" height="17"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Listening to all MIDI Inputs" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xTO-NK-fv8">
+                                <rect key="frame" x="16" y="45" width="170.5" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -58,9 +57,8 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HmH-Hz-Gwv">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HmH-Hz-Gwv">
                                 <rect key="frame" x="292" y="13" width="67" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Bluetooth"/>
                                 <connections>
                                     <action selector="bluetoothButtonFromUI:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DK0-6p-jPG"/>
@@ -82,12 +80,16 @@
                             <constraint firstItem="Xhs-wk-bYv" firstAttribute="centerY" secondItem="NTA-gs-ktV" secondAttribute="centerY" constant="1.75" id="GzN-u8-UWL"/>
                             <constraint firstItem="MBZ-sv-shH" firstAttribute="top" secondItem="Dot-rk-k70" secondAttribute="bottom" constant="10" id="JYR-GB-dbk"/>
                             <constraint firstItem="Dot-rk-k70" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="75" id="KAM-s1-AHQ"/>
+                            <constraint firstItem="xTO-NK-fv8" firstAttribute="top" secondItem="fcO-WS-ZhL" secondAttribute="bottom" constant="8" id="Ktt-Uw-uqh"/>
                             <constraint firstItem="fcO-WS-ZhL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="NQf-rK-4zX"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Dot-rk-k70" secondAttribute="trailing" id="POW-Uv-8Hy"/>
                             <constraint firstItem="NTA-gs-ktV" firstAttribute="leading" secondItem="fcO-WS-ZhL" secondAttribute="leading" id="Qn3-XB-ant"/>
-                            <constraint firstItem="NTA-gs-ktV" firstAttribute="top" secondItem="fcO-WS-ZhL" secondAttribute="bottom" constant="26" id="U0G-Ac-ZbD"/>
+                            <constraint firstAttribute="trailing" secondItem="HmH-Hz-Gwv" secondAttribute="trailing" constant="16" id="UfU-Cc-Oql"/>
                             <constraint firstAttribute="leadingMargin" secondItem="Dot-rk-k70" secondAttribute="leading" id="Uzm-Fy-Cqf"/>
+                            <constraint firstItem="xTO-NK-fv8" firstAttribute="leading" secondItem="fcO-WS-ZhL" secondAttribute="leading" id="Wkg-7H-ewd"/>
+                            <constraint firstItem="HmH-Hz-Gwv" firstAttribute="centerY" secondItem="fcO-WS-ZhL" secondAttribute="centerY" id="YdK-vK-SeY"/>
                             <constraint firstAttribute="leadingMargin" secondItem="fcO-WS-ZhL" secondAttribute="leading" id="hqA-y9-iAF"/>
+                            <constraint firstItem="NTA-gs-ktV" firstAttribute="top" secondItem="xTO-NK-fv8" secondAttribute="bottom" constant="1" id="t28-80-gAX"/>
                         </constraints>
                     </view>
                     <connections>
@@ -96,12 +98,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="97" y="275"/>
+            <point key="canvasLocation" x="96.799999999999997" y="274.81259370314842"/>
         </scene>
         <!--SenderVC-->
         <scene sceneID="gYW-lG-Gps">
             <objects>
-                <viewController storyboardIdentifier="MIDISenderVC" id="8Fc-ay-REC" customClass="MIDISenderVC" customModule="MidiMonitor" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MIDISenderVC" id="8Fc-ay-REC" customClass="MIDISenderVC" customModule="MIDIUtility" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="yrG-Qy-Bvu"/>
                         <viewControllerLayoutGuide type="bottom" id="MfI-ik-EvE"/>
@@ -145,37 +147,37 @@
                                     </mask>
                                 </variation>
                             </textView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="CC#" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sb9-lS-svS" customClass="MIDINumberField" customModule="MidiMonitor" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="CC#" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sb9-lS-svS" customClass="MIDINumberField" customModule="MIDIUtility" customModuleProvider="target">
                                 <rect key="frame" x="102" y="66" width="52.5" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="VAL" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YQ2-NJ-urc" customClass="MIDINumberField" customModule="MidiMonitor" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="VAL" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YQ2-NJ-urc" customClass="MIDINumberField" customModule="MIDIUtility" customModuleProvider="target">
                                 <rect key="frame" x="172.5" y="66" width="52.5" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Note" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="woF-Tb-ku2" customClass="MIDINumberField" customModule="MidiMonitor" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Note" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="woF-Tb-ku2" customClass="MIDINumberField" customModule="MIDIUtility" customModuleProvider="target">
                                 <rect key="frame" x="102" y="28" width="52.5" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="VEL" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TmS-Sk-m5e" customClass="MIDINumberField" customModule="MidiMonitor" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="VEL" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TmS-Sk-m5e" customClass="MIDINumberField" customModule="MIDIUtility" customModuleProvider="target">
                                 <rect key="frame" x="172.5" y="28" width="52.5" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="CHAN" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0ma-H2-L5I" customClass="MIDIChannelField" customModule="MidiMonitor" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="CHAN" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0ma-H2-L5I" customClass="MIDIChannelField" customModule="MIDIUtility" customModuleProvider="target">
                                 <rect key="frame" x="244" y="28" width="61" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="CHAN" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AqK-Tx-FtP" customClass="MIDIChannelField" customModule="MidiMonitor" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="CHAN" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AqK-Tx-FtP" customClass="MIDIChannelField" customModule="MIDIUtility" customModuleProvider="target">
                                 <rect key="frame" x="244" y="66" width="61" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -255,13 +257,13 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="MAk-y6-2e1"/>
-                                <exclude reference="Q6x-4o-D9h"/>
                                 <exclude reference="1at-Rz-1S6"/>
                                 <exclude reference="BJH-SW-SPc"/>
                                 <exclude reference="Bmd-Cq-kLf"/>
                                 <exclude reference="jGy-Bd-c7O"/>
                                 <exclude reference="uOP-Il-ZQM"/>
                                 <exclude reference="xtH-sl-V7W"/>
+                                <exclude reference="Q6x-4o-D9h"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=compact">
@@ -269,13 +271,13 @@
                                 <exclude reference="8MT-CZ-2hx"/>
                                 <include reference="MAk-y6-2e1"/>
                                 <exclude reference="Yhn-pr-x5U"/>
-                                <include reference="Q6x-4o-D9h"/>
                                 <exclude reference="BJH-SW-SPc"/>
                                 <include reference="Bmd-Cq-kLf"/>
                                 <exclude reference="UVC-ok-5pC"/>
                                 <include reference="jGy-Bd-c7O"/>
                                 <exclude reference="uOP-Il-ZQM"/>
                                 <include reference="xtH-sl-V7W"/>
+                                <include reference="Q6x-4o-D9h"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=compact-widthClass=compact">
