Removing old version information

--- a/Examples/iOS/AnalogSynthX/AnalogSynthX/Base.lproj/Main.storyboard
+++ b/Examples/iOS/AnalogSynthX/AnalogSynthX/Base.lproj/Main.storyboard
@@ -63,7 +63,7 @@
                                             <action selector="midiPanicPressed:" destination="Z3O-nk-rpn" eventType="touchUpInside" id="Gni-Ij-MJc"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AudioKit 3: Analog Synth X" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9EV-yy-X47" userLabel="Synth Lbl">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AudioKit: Analog Synth X" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9EV-yy-X47" userLabel="Synth Lbl">
                                         <rect key="frame" x="8" y="8" width="200" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="200" id="E6Z-l5-uP7"/>
